<resources>
    <string name="app_name" translatable="false">NutriLog</string>

    <!-- Welcome -->
    <string name="text_button_next">Next</string>
    <string name="text_start_welcome">Let\'s get started</string>
    <string name="text_title_welcome_1">WELCOME ONBOARD!</string>
    <string name="text_subtitle_welcome_1">Starting your health journey can feel overwhelming. But with our app, tracking your food becomes effortless.</string>
    <string name="text_title_welcome_2">SIMPLIFY YOUR WELL-BEING JOURNEY</string>
    <string name="text_subtitle_welcome_2">Our app takes the stress out of food logging, allowing you to spend less time documenting and more time living a healthier life.</string>
    <string name="text_title_welcome_3">TRACKING YOUR CONSUMPTION</string>
    <string name="text_subtitle_welcome_3"> Unlock valuable knowledge by analyzing your nutritional data to understand your body\'s needs and how your food choices impact you.</string>

    <!-- Auth -->
    <string name="hint_full_name">Enter your full name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_gender">Select your gender</string>
    <string name="hint_date_birth">Enter your date birth</string>

    <string name="header_signin_title">Welcome back,</string>
    <string name="header_signin_subtitle">You’ve been missed!</string>
    <string name="header_signup_title">Create an account</string>
    <string name="header_signup_subtitle">Let’s start your healthy day</string>

    <string name="label_select_active_level">Active Level</string>

    <string name="label_full_name">Full Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_gender">Gender</string>
    <string name="label_date_birth">Date of birth</string>

    <string name="label_signin_here">Already have an account?</string>
    <string name="label_signin">Sign In</string>
    <string name="label_signup_here">Don\'t have an account yet?</string>
    <string name="label_signup">Sign Up</string>

    <string name="validation_full_name">Full name can only be characters</string>
    <string name="validation_email">Your email format is not correct</string>
    <string name="validation_password">Minimum of %d characters</string>
    <string name="validation_gender">Unknown gender</string>

    <!-- Analysis -->
    <string name="label_photo">Photo</string>
    <string name="label_change_photo">Change Photo</string>
    <string name="header_analysis_title">Analysis</string>

    <string name="hint_photo">Choose your food photo</string>

    <string name="validation_photo_empty">Please choose a photo</string>

    <string name="actions_analysis">Submit</string>

    <string name="message_error_analyze">Analyze image failed to initialize. See the error log for details</string>
    <string name="message_error_nutrition">Failed to get nutrition data. Please try again later</string>
    <string name="message_empty_image_warning">Please insert the image file first</string>


    <!-- About Us -->
    <string name="header_about_title">About Us</string>
    <string name="content_desc_app_logo">App Logo</string>
    <string name="content_desc_photo_member">team member photo</string>

    <string name="label_made_by">Made by Bangkit Product Capstone Team</string>
    <string name="label_nickname">Nickname</string>

    <string name="text_about_us_description">Go beyond basic food logging and unlock a deeper understanding of your nutrition with NutriLog. Our app leverages cutting-edge machine learning to analyze your daily intake and providing personalized insights that empower you to make informed choices about your health.</string>

    <string name="label_name_nizar">Nizar</string>
    <string name="label_name_rafi">Rafi</string>
    <string name="label_name_israk">Israk</string>
    <string name="label_name_guntur">Guntur</string>
    <string name="label_name_fauzan">Fauzan</string>
    <string name="label_name_gisella">Gisella</string>
    <string name="label_name_bagja">Bagja</string>

    <!-- NutritionRepository Card -->
    <string name="label_nutrition">Nutrition</string>
    <string name="label_nutrition_level">Nutrition Level</string>
    <string name="label_amount_of_nutrition">%s g</string>
    <string name="label_amount_of_nutrition_calories">%s kcal</string>

    <!-- Navigation -->
    <string name="label_nav_home">Home</string>
    <string name="label_nav_history">History</string>
    <string name="label_nav_analysis">Analysis</string>
    <string name="label_nav_profile">Profile</string>

    <!-- History -->
    <string name="label_select_month">Month</string>
    <string name="category_chart_total">Total</string>

    <!-- Month -->
    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Activity Level -->
    <string-array name="ActLevel">
        <item>Active</item>
        <item>Moderately Active</item>
        <item>Sedentary</item>
    </string-array>

    <!-- Gender -->
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Height & Weight -->
    <string name="label_height">Height</string>
    <string name="label_weight">Weight</string>
    <string name="label_value_height">%s cm</string>
    <string name="label_value_weight">%s kg</string>

    <!-- Nutrition Option -->
    <string name="label_nutrition_carbs">"Carbohydrate"</string>
    <string name="label_nutrition_protein">"Protein"</string>
    <string name="label_nutrition_fat">"Fat"</string>
    <string name="label_nutrition_calories">"Calories"</string>

    <!-- Nutrition Level -->
    <string name="label_level_deficient">Deficient</string>
    <string name="label_level_optimal">Optimal</string>
    <string name="label_level_close">Close to limit</string>
    <string name="label_level_over">Excessively high</string>

    <!-- Common -->
    <string name="validation_must_not_empty">Field cannot be empty</string>

    <string name="header_welcome">Hello,</string>

    <string name="logoutbutton_content_desc">logoutButton</string>

    <string name="language_content_desc">language iv</string>
    <string name="icon_content_desc">Icon</string>

    <string name="message_snackbar" translatable="false">This is a custom snackbar</string>
    <string name="message_signin_success">Sign in successful</string>
    <string name="message_signin_failed">Sign in failed. Please check your email and password again.</string>

    <string name="label_month">MONTH</string>
    <string name="label_year">YEAR</string>
    <string name="label_loading">Loading…</string>
    <string name="label_logout">Logout</string>
    <string name="label_language">Language</string>
    <string name="label_icon_gallery">Gallery</string>
    <string name="label_icon_camera">Camera</string>
    <string name="label_empty_1">When you add your food history</string>
    <string name="label_empty_2">You\'ll see it here</string>
    <string name="label_action_level">Action Level</string>

    <!-- Bottom Sheet -->
    <string name="label_food_name">Food Name</string>
    <string name="label_date">Date</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_save">Save</string>

    <!-- Camera -->
    <string name="message_failed_access_camera">Failed to show the camera</string>
    <string name="message_failed_take_picture">Failed to take a picture</string>
    <string name="message_permission_denied">Camera permission denied</string>

</resources>