<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_24"
        android:title="@string/label_nav_home"
        app:cnb_iconColor="@color/md_theme_primary"
        app:cnb_textColor="@color/md_theme_primary"
        app:cnb_backgroundColor="@color/md_theme_primary_200" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history_24"
        android:title="@string/label_nav_history"
        app:cnb_iconColor="@color/md_theme_primary"
        app:cnb_textColor="@color/md_theme_primary"
        app:cnb_backgroundColor="@color/md_theme_primary_200" />
    <item
        android:id="@+id/analysisActivity"
        android:icon="@drawable/ic_rounded_plus_24"
        android:title="@string/label_nav_analysis"
        app:cnb_iconColor="@color/md_theme_primary"
        app:cnb_textColor="@color/md_theme_primary"
        app:cnb_backgroundColor="@color/md_theme_primary_200" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user_24"
        android:title="@string/label_nav_profile"
        app:cnb_iconColor="@color/md_theme_primary"
        app:cnb_textColor="@color/md_theme_primary"
        app:cnb_backgroundColor="@color/md_theme_primary_200" />
</menu>