<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.SignUpFragment">

    <TextView
        android:id="@+id/tv_signup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Text.H5.Bold"
        android:text="@string/header_signup_title"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        app:layout_constraintBottom_toTopOf="@id/tv_signup_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_signup_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Text.Subtitle1.Semibold"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:text="@string/header_signup_subtitle"
        app:layout_constraintBottom_toTopOf="@id/layout_register_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_title"
        app:layout_constraintEnd_toEndOf="@id/tv_signup_title"
        app:layout_constraintStart_toStartOf="@id/tv_signup_title" />

    <com.nutrilog.app.presentation.ui.base.component.input.InputLayout
        android:id="@+id/layout_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_full_name"
        app:placeholderText="@string/hint_full_name"
        app:startIconDrawable="@drawable/ic_person_24"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_36dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_register_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_subtitle"
        app:layout_constraintEnd_toEndOf="@id/tv_signup_subtitle"
        app:layout_constraintStart_toStartOf="@id/tv_signup_subtitle">

        <com.nutrilog.app.presentation.ui.base.component.input.FullNameInputEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.nutrilog.app.presentation.ui.base.component.input.InputLayout>

    <com.nutrilog.app.presentation.ui.base.component.input.InputLayout
        android:id="@+id/layout_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        app:placeholderText="@string/hint_email"
        app:startIconDrawable="@drawable/ic_mail_24"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_14dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_register_password"
        app:layout_constraintTop_toBottomOf="@+id/layout_register_name"
        app:layout_constraintEnd_toEndOf="@id/layout_register_name"
        app:layout_constraintStart_toStartOf="@id/layout_register_name">

        <com.nutrilog.app.presentation.ui.base.component.input.EmailInputEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.nutrilog.app.presentation.ui.base.component.input.InputLayout>

    <com.nutrilog.app.presentation.ui.base.component.input.InputLayout
        android:id="@+id/layout_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        app:placeholderText="@string/hint_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock_24"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_14dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintTop_toBottomOf="@+id/layout_register_email"
        app:layout_constraintEnd_toEndOf="@id/layout_register_email"
        app:layout_constraintStart_toStartOf="@id/layout_register_email">

        <com.nutrilog.app.presentation.ui.base.component.input.PasswordInputEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.nutrilog.app.presentation.ui.base.component.input.InputLayout>

    <Button
        android:id="@+id/btn_signup"
        style="@style/Button.Primary"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_18dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:text="@string/label_signup"
        app:layout_constraintBottom_toTopOf="@id/tv_signin_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_register_password" />

    <TextView
        android:id="@+id/tv_signin_here"
        style="@style/Text.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_signin_here"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_signin"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <TextView
        android:id="@+id/tv_signin"
        android:paddingHorizontal="@dimen/dimen_10dp"
        style="@style/Text.Subtitle1.Bold"
        android:textColor="?attr/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_signin"
        app:layout_constraintStart_toEndOf="@id/tv_signin_here"
        app:layout_constraintTop_toTopOf="@id/tv_signin_here"
        app:layout_constraintBottom_toBottomOf="@id/tv_signin_here"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        android:id="@+id/loading_layout"
        android:visibility="gone"
        layout="@layout/layout_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>