<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.SignInFragment">

    <TextView
        android:id="@+id/tv_signin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_h5_bold"
        android:text="@string/header_signin_title"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@id/tv_signin_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_signin_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_subtitle_1_semibold"
        android:layout_marginHorizontal="24dp"
        android:text="@string/header_signin_subtitle"
        app:layout_constraintBottom_toTopOf="@id/layout_login_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_title"
        app:layout_constraintEnd_toEndOf="@id/tv_signin_title"
        app:layout_constraintStart_toStartOf="@id/tv_signin_title" />

    <com.nutrilog.app.presentation.ui.base.component.input.InputLayout
        android:id="@+id/layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        app:placeholderText="@string/hint_email"
        app:startIconDrawable="@drawable/ic_mail_24"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_login_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_subtitle"
        app:layout_constraintEnd_toEndOf="@id/tv_signin_subtitle"
        app:layout_constraintStart_toStartOf="@id/tv_signin_subtitle">

        <com.nutrilog.app.presentation.ui.base.component.input.EmailInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress" />

    </com.nutrilog.app.presentation.ui.base.component.input.InputLayout>

    <com.nutrilog.app.presentation.ui.base.component.input.InputLayout
        android:id="@+id/layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        app:placeholderText="@string/hint_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock_24"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signin"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_email"
        app:layout_constraintEnd_toEndOf="@id/layout_login_email"
        app:layout_constraintStart_toStartOf="@id/layout_login_email">

        <com.nutrilog.app.presentation.ui.base.component.input.PasswordInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password" />

    </com.nutrilog.app.presentation.ui.base.component.input.InputLayout>

    <Button
        android:id="@+id/btn_signin"
        style="@style/button_primary"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_18dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:text="@string/label_signin"
        app:layout_constraintBottom_toTopOf="@id/tv_signup_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_login_password" />

    <TextView
        android:id="@+id/tv_signup_here"
        style="@style/text_subtitle_1_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_signup_here"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_signup"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

    <TextView
        android:id="@+id/tv_signup"
        android:paddingHorizontal="@dimen/dimen_10dp"
        style="@style/text_subtitle_1_bold"
        android:textColor="?attr/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_signup"
        app:layout_constraintStart_toEndOf="@id/tv_signup_here"
        app:layout_constraintTop_toTopOf="@id/tv_signup_here"
        app:layout_constraintBottom_toBottomOf="@id/tv_signup_here"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>