<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.about.AboutActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:contentDescription="@string/content_desc_app_logo"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/appNameLabel"
        style="@style/Text.Body1.Bold"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/aboutUsDescTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_about_us_description"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="16dp"
        android:textAlignment="center"
        android:lineSpacingExtra="@dimen/dimen_4dp"
        style="@style/Text.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appNameLabel" />

    <TextView
        android:id="@+id/madeByLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/label_made_by"
        style="@style/Text.Subtitle2.Bold"
        app:layout_constraintStart_toStartOf="@id/appNameLabel"
        app:layout_constraintEnd_toEndOf="@id/appNameLabel"
        app:layout_constraintTop_toBottomOf="@id/aboutUsDescTv"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/authorPhotoOne"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/content_desc_photo_member"
        app:layout_constraintEnd_toStartOf="@+id/authorPhotoTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/madeByLabel"
        android:src="@drawable/profile_raffi" />

    <TextView
        android:id="@+id/authorNameOne"
        style="@style/Text.Caption"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name_rafi"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoOne"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoOne"
        app:layout_constraintTop_toBottomOf="@id/authorPhotoOne" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/authorPhotoTwo"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_desc_photo_member"
        app:layout_constraintBottom_toBottomOf="@id/authorPhotoOne"
        app:layout_constraintEnd_toStartOf="@+id/authorPhotoThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/authorPhotoOne"
        app:layout_constraintTop_toTopOf="@id/authorPhotoOne"
        android:src="@drawable/profile_israk" />

    <TextView
        android:id="@+id/authorNameTwo"
        style="@style/Text.Caption"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name_israk"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoTwo"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoTwo"
        app:layout_constraintTop_toBottomOf="@id/authorPhotoTwo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/authorPhotoThree"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_desc_photo_member"
        app:layout_constraintBottom_toBottomOf="@id/authorPhotoTwo"
        app:layout_constraintEnd_toStartOf="@+id/authorPhotoFour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/authorPhotoTwo"
        app:layout_constraintTop_toTopOf="@id/authorPhotoTwo"
        android:src="@drawable/welcome_icon_3" />

    <TextView
        android:id="@+id/authorNameThree"
        style="@style/Text.Caption"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name_gisella"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoThree"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoThree"
        app:layout_constraintTop_toBottomOf="@id/authorPhotoThree" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/authorPhotoFour"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_desc_app_logo"
        app:layout_constraintBottom_toBottomOf="@id/authorPhotoThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/authorPhotoThree"
        app:layout_constraintTop_toTopOf="@id/authorPhotoThree"
        android:src="@drawable/profile_fauzan" />

    <TextView
        android:id="@+id/authorNameFour"
        style="@style/Text.Caption"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name_fauzan"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoFour"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoFour"
        app:layout_constraintTop_toBottomOf="@id/authorPhotoFour" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/authorPhotoFive"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/content_desc_app_logo"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoTwo"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoOne"
        app:layout_constraintTop_toBottomOf="@id/authorNameOne"
        android:src="@drawable/profile_bagja" />

    <TextView
        android:id="@+id/authorNameFive"
        style="@style/Text.Caption"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name_bagja"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoFive"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoFive"
        app:layout_constraintTop_toBottomOf="@id/authorPhotoFive" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/authorPhotoSix"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_desc_app_logo"
        app:layout_constraintBottom_toBottomOf="@id/authorPhotoFive"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoThree"
        app:layout_constraintStart_toEndOf="@+id/authorPhotoOne"
        app:layout_constraintTop_toTopOf="@id/authorPhotoFive"
        android:src="@drawable/profile_nizar" />

    <TextView
        android:id="@+id/authorNameSix"
        style="@style/Text.Caption"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name_nizar"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoSix"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoSix"
        app:layout_constraintTop_toBottomOf="@id/authorPhotoSix" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/authorPhotoSeven"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_desc_app_logo"
        app:layout_constraintBottom_toBottomOf="@id/authorPhotoSix"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoFour"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoThree"
        app:layout_constraintTop_toTopOf="@id/authorPhotoSix"
        android:src="@drawable/profile_guntur" />

    <TextView
        android:id="@+id/authorNameSeven"
        style="@style/Text.Caption"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name_guntur"
        app:layout_constraintEnd_toEndOf="@+id/authorPhotoSeven"
        app:layout_constraintStart_toStartOf="@+id/authorPhotoSeven"
        app:layout_constraintTop_toBottomOf="@id/authorPhotoSeven" />

</androidx.constraintlayout.widget.ConstraintLayout>