<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dimen_16dp"
    android:layout_margin="@dimen/dimen_20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/empty_data_icon"
        android:contentDescription="@string/label_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:text="@string/label_empty_1"
        style="@style/Text.Body1"
        android:layout_marginBottom="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/ivEmpty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivEmpty"
        app:layout_constraintStart_toStartOf="@id/ivEmpty"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/label_empty_2"
        style="@style/Text.Body1"
        android:layout_marginBottom="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivEmpty"
        app:layout_constraintStart_toStartOf="@id/ivEmpty"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>